<resources>
    <string name="app_name">HRMS</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">HRMS</string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invalidInternetConnection">Sorry! there is no internet connectivity.</string>
    <string name="invalidUser">Please Enter Valid Username and Password</string>
    <string name="enterUser">Please Enter Username and Password</string>
    <string name="enterUserId">Please Enter UserID</string>
    <string name="enterPassWord">Please Enter Password</string>
    <string name="entercorrectPassWord">Password is not matching</string>
    <string name="toast_bzzz">Sorry, but we cannot do this, because you did not give us permission!</string>
    <string name="toast_location">No matter where you go, there you are</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="email">UserID</string>
    <string name="passowrd">Password</string>

    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered UserID</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="password">Password</string>
    <string name="login">Account Login</string>
    <string name="powered_by_sphinax_infosystem">Powered by Sphinax Infosystem</string>
    <string name="username">UserName</string>
    <string name="welcome_to">Welcome To</string>


    <string name="material_calendar_monday">MO</string>
    <string name="material_calendar_tuesday">TU</string>
    <string name="material_calendar_wednesday">WE</string>
    <string name="material_calendar_thursday">TH</string>
    <string name="material_calendar_friday">FR</string>
    <string name="material_calendar_saturday">SA</string>
    <string name="material_calendar_sunday">SU</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Dzisiaj</string>
    <string name="material_calendar_positive_button">Wybierz</string>
    <string name="material_calendar_negative_button">Anuluj</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
</resources>
